--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -3,15 +3,15 @@
 
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Przemieść jednostkę!\nWybierz jednostkę > Wskaż miejsce docelowe > Wykonaj polecenie wciskając strzałkę
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Załóż miasto!\nWybierz Osadnika (ikona flagi) > Wybierz akcję 'Załóż miasto' (lewy dolny róg)
-Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta!\nWciśnij dwukrotnie przycisk Miasto 
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\nWciśnij przycisk Technologii (zielony, na górze po lewej) > \n wybierz technologie > wciśnij 'Badaj'
+Enter the city screen!\nClick the city button twice = Przejdź do panelu miasta!\nKliknij dwukrotnie na Miasto
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wybierz technologię do odkrycia!\nWciśnij przycisk Wybierz Technologię (zielonawy, na górze po lewej) > \n Wybierz technologię > wciśnij 'Opracuj'
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wybierz budowlę!\nPrzejdź do panelu miasta > Wybierz jednostkę lub budowlę (lewa strona)
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakończ turę!\nPrzejdź przez wszystkie jednostki wciskając przycisk 'Następna jednostka' > Wciśnij 'Następna tura'
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić cywili
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić obywateli
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację!\nEksploruj świat do momentu napotkania nowej cywilizacji!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk 'Menu' (lewy górny róg) > Wciśnij przycisk 'Opcje'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!\nStwórz Robotnika > Przemieść go na Równiny lub Łąkę >n\ Kliknij 'Zbuduj ulepszenie' (na dole po lewej stronie, nad tabelą jednostek) > Wybierz Farmę > Zostaw tam pracownika, dopóki nie skończy
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami\n0r, Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!\nStwórz Robotnika > n\Przemieść go na Równiny lub Łąkę >n\Kliknij 'Zbuduj ulepszenie' (na dole po lewej stronie, nad tabelą jednostek) > n\Wybierz Farmę > Zostaw tam pracownika, dopóki nie skończy
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami,\nlub Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną!n\nWybierz jednostke powietrzną > wybierz inne miasto w zasięgu > \nPrzemieść jednostkę do innego miasta
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobacz rozkład statystyk!\nWejdź w 'Przegląd' (górny prawy róg) >\nKliknij na 'Statystyki'
@@ -485,7 +485,7 @@ Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked un
 
 Spain = Hiszpania
 Isabella = Izabella
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Złota za odkrywanie Cudów Natury (premia zwiększona do 500 Złota, jeśli odkryjesz je jako pierwsszy). Kultura, Zadowolenie i Pola są podwajane z Cudów Natury. 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Złota za odkrywanie Cudów Natury (premia zwiększona do 500 Złota, jeśli odkryjesz je jako pierwszy). Kultura, Zadowolenie i Pola uprawne są podwajane z Cudów Natury. 
 
 # New game screen
 
@@ -599,7 +599,7 @@ Downloading... = Pobieranie...
 Could not download music! = Nie udało się pobrać muzyki!
 Show = Pokaż
 Hide = Ukryj
-Show worked tiles = Pokaż robocze pola
+Show worked tiles = Pokaż pola z cywilami
 Show resources and improvements = Pokaż zasoby i ulepszenia
 Check for idle units = Sprawdź jednostki czekające na rozkazy
 Move units with a single tap = Przemieść jednostki jednym dotykiem
@@ -687,14 +687,14 @@ A new barbarian encampment has spawned! = Nowy obóz barbarzyńców został utwo
 # World Screen UI
 
 Working... = Pracujemy nad tym...
-Waiting for other players... = Oczekiwanie na innych graczy
+Waiting for other players... = Oczekiwanie /nna innych /ngraczy
 in = w
-Next turn = Następna tura
+Next turn = Następna /nTura
 Turn = Tura
 turns = tury
 turn = tura
-Next unit = Następna jednostka
-Pick a policy = Wybierz ustrój społeczny
+Next unit = Następna /nJednostka
+Pick a policy = Wybierz /nUstrój Społeczny
 Movement = Ruch
 Strength = Siła
 Ranged strength = Siła dystansowa
@@ -747,7 +747,7 @@ Close = Zamknij
 
 # City screen
 
-Exit city = Opuść miasto
+Exit city = Wyjdź z miasta
 Raze city = Zburz miasto
 Stop razing city = Przestań niszczyć miasto
 Buy for [amount] gold = Kup za [amount] złota
@@ -769,7 +769,7 @@ Specialist Allocation = Przydział specjalistów
 Specialists = Specjaliści
 Food eaten = Żywność zjedzona
 Growth bonus = Bonus do rośnięcia
-Unassigned population = Nieprzydzieleni cywile
+Unassigned population = Nieprzydzieleni obywatele
 [turnsToExpansion] turns to expansion = Ilość tur do ekspansji: [turnsToExpansion] 
 Stopped expansion = Zatrzymana ekspansja
 [turnsToPopulation] turns to new population = Ilość tur do nowej populacji: [turnsToPopulation] 
@@ -789,7 +789,7 @@ The city will not produce anything. = Miasto niczego nie produkuje
 
 # Technology UI
 
-Pick a tech = Wybierz technologię
+Pick a tech = Wybierz /ntechnologię
 Pick a free tech = Wybierz darmową technologię
 Research [technology] = Opracuj [technology]
 Pick [technology] as free tech = Wybierz [technology] jako darmową technologię
@@ -841,7 +841,7 @@ Final = Finalny
 Other = Inne
 Population = Populacja
 City States = Państwa miasta
-Tile yields = Pola
+Tile yields = Pola uprawne
 Trade routes = Szlaki handlowe
 Maintenance = Utrzymanie
 Transportation upkeep = Utrzymanie transportu
@@ -911,8 +911,7 @@ May contain [listOfResources] = Może zawierać [listOfResources]
 Upgrades to [upgradedUnit] = Ulepsz do [upgradedUnit]
 Obsolete with [obsoleteTech] = Przestarzałe z [obsoleteTech]
 Occurs on [listOfTerrains] = Występuje na [listOfTerrains]
- # Requires translation!
-Placed on [terrainType] = 
+Placed on [terrainType] = Umieszczony na [terrainType]
 Can be found on  = Znajduje się na
 Improved by [improvement] = Ulepszone przez [improvement]
 Bonus stats for improvement:  = Bonusowe statystyki dla ulepszeń
@@ -1072,7 +1071,7 @@ Free Speech = Wolność Słowa
 Democracy = Demokracja
 Specialists produce half normal unhappiness = Specjaliści generują o połowę mniejsze niezadowolenie
 Freedom Complete = Pełna Swoboda
-Tile yield from great improvement +100%, golden ages increase by 50% = Wydajność pola rośnie o 100% dzięki wielkiemu ulepszeniu, złoty wiek rośnie o 50%
+Tile yield from great improvement +100%, golden ages increase by 50% = Wydajność pól uprawnych rośnie o 100% dzięki wielkiemu ulepszeniu, złoty wiek rośnie o 50%
 
 Autocracy = Autokracja
 -33% unit upkeep costs = kosz utrzymania jednostki maleje o 33%
@@ -1298,10 +1297,8 @@ Fountain of Youth = Źródło młodości
 
 # Natural Wonders Uniques
 
- # Requires translation!
-Grants 500 Gold to the first civilization to discover it = 
- # Requires translation!
-Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
+Grants 500 Gold to the first civilization to discover it = Daje 500 Złota pierwszej cywilizacji, która je odkryła
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Przyznaje Odmłodzenie (wszystkie efekty lecznicze podwojone) sąsiednim jednostkom lądowo-wojskowym przez resztę gry.
 
 # Resources
 
@@ -1436,24 +1433,20 @@ Pikeman = Wojownik z piką
 Landsknecht = Landsknecht
 Knight = Rycerz
 Camel Archer = Łucznik na wielbłądzie
- # Requires translation!
-Conquistador = 
- # Requires translation!
-Defense bonus when embarked = 
+Conquistador = Zdobywca
+Defense bonus when embarked = Premia obronna przy wejściu w tryb statku
 Naresuan's Elephant = Słoń Naresuan
 Samurai = Samuraj
 Combat very likely to create Great Generals = Walka może wyłonić Wielkich Generałów
 Caravel = Karawela
 Turtle Ship = Geobukseon
 +1 Visibility Range = +1 do pola widzenia
- # Requires translation!
-+2 Visibility Range = 
++2 Visibility Range = +2 do pola widzenia
 Cannon = Armata
 Musketman = Strzelec z muszkietem
 Musketeer = Muszkieter
 Janissary = Janczar
- # Requires translation!
-Tercio = 
+Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Leczy [amountHealed] obrażeń po zabiciu jednostki
 Minuteman = Minuteman
 Frigate = Fregata
