--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -4,11 +4,11 @@
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Передвиньте юнит!\nВыберите юнит > Выберите клетку на карте > Нажмите на иконку стрелки
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Постройте город!\nВыберите поселенца (юнит с флажком) > Нажмите 'Основать город' (нижний левый угол)
 Enter the city screen!\nClick the city button twice = Откройте экран города!\nНажмите на кнопку города дважды
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Выберите технологию для исследования!\nНажмите на кнопку технология (зеленая, сверху слева) > \n Выберите технологию > Нажмите 'Исследовать' (снизу справа)
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Выберите технологию для исследования!\nНажмите на кнопку технология (зелёная, сверху слева) > \n Выберите технологию > Нажмите 'Исследовать' (снизу справа)
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Выберите строительство!\nОткройте экран города > Нажмите на юнит или здание (с левой стороны)
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустите ход!\nВыберите юнита с помощью кнопки 'Следующий юнит' > Нажмите 'Следующий ход'
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Переназначьте обрабатываемые клетки!\nОткройте экран города > Нажмите на назначенную (зеленую) клетку чтобы освободить её > \n Нажмите на свободную клетку чтобы назначить туда рабочих
-Meet another civilization!\nExplore the map until you encounter another civilization! = Встретьте другую цивилизацию!\nИсследуйте мир пока вы не стретите другую цивилизацию!
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Переназначьте обрабатываемые клетки!\nОткройте экран города > Нажмите на назначенную (зелёную) клетку чтобы освободить её > \n Нажмите на свободную клетку чтобы назначить туда рабочих
+Meet another civilization!\nExplore the map until you encounter another civilization! = Встретьте другую цивилизацию!\nИсследуйте мир пока вы не встретите другую цивилизацию!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Откройте таблицу параметров!\nНажмите на кнопку меню (сверху слева) > нажмите 'Параметры'
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Постройте улучшение!\nПостройте рабочего > Отправьте его на клетку Равнины или Пересеченная местность > \n Выберите 'Создать улучшение' > Выберите ферму > \n Оставьте рабочего на клетке пока он не закончит работу
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Создайте торговый маршрут!\nПостройте дорогу между столицей и другим городом\nили, автоматизируйте рабочего и ждите когда он сделает это сам
@@ -16,7 +16,7 @@ Conquer a city!\nBring an enemy city down to low health > \nEnter the city with 
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Переместите воздушый юнит!\nВыберите воздушный юнит > Выберите другой город в доступном радиусе > \nПереместите юнит в другой город
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Посмотрите вашу статистику!\nОткройте экран обзора (верхний правый угол) >\nНажмите на 'Статистика'
 
-Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = О нет! Кажется всё что-то пошло КАТАСТРОФИЧЕСКИ плохо! Это АБСОЛЮТНО не должно было произойти! Пожалуйста отправьте мне (yairm210@hotmail.com) емейл с информацией об игре (меню -> сохранить игру -> скопируйте информацию об игре -> вставьте в емейл) и я попытаюсь это исправить настолько быстро как я могу!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = О нет! Кажется что-то пошло КАТАСТРОФИЧЕСКИ плохо! Это АБСОЛЮТНО не должно было произойти! Пожалуйста отправьте мне (yairm210@hotmail.com) емейл с информацией об игре (меню -> сохранить игру -> скопируйте информацию об игре -> вставьте в емейл) и я попытаюсь это исправить настолько быстро насколько я могу!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = О нет! Кажется всё что-то пошло КАТАСТРОФИЧЕСКИ плохо! Это АБСОЛЮТНО не должно было произойти! Пожалуйста, отправьте нам отчет об ошибке и мы постараемся исправить ее как можно скорее!
 
 # Buildings
@@ -36,11 +36,11 @@ Stonehenge = Стоунхендж
 
 Library = Библиотека
 +1 Science Per 2 Population = +1 Наука за 2 населения
-Paper Maker = Бумажная мануфактура
+Paper Maker = Бумажная мастерская
 
 The Great Library = Великая Библиотека
 Free Technology = Бесплатная технология
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 'Библиотеки - это раки, где покойно хранятся останки великих святых, полных добродетели и лишенных притворства.' - Сэр Френсис Бэкон
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 'Библиотеки - это раки, где покойно хранятся останки великих святых, полных добродетели и лишённых притворства.' - Сэр Френсис Бэкон
 
 Circus = Цирк
 Walls = Стены
@@ -53,7 +53,7 @@ Provides 2 free workers = Предоставляет 2 бесплатных ра
 
 Barracks = Казармы
 Krepost = Острог
-Culture and Gold costs of acquiring new tiles reduced by 25% in this city = -25% к необходимому количеству Культура и Золото для получения клеток вокруг данного города
+Culture and Gold costs of acquiring new tiles reduced by 25% in this city = -25% к необходимому количеству Культуры и Золота для получения клеток вокруг данного города
 
 Colossus = Колосс Родосский
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 'По миру тесному шагает колосс, а мы, ничтожные людишки, у исполинских ног его снуем и для себя могил бесславных ищем.' - Уильям Шекспир, 'Юлий Цезарь'
@@ -78,15 +78,15 @@ All military naval units receive +1 movement and +1 sight = Все военно-
 National College = Национальный колледж
 
 Chichen Itza = Чичен-Ица
-'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 'Катун установлен в Чичен-Итце. Здесь будет поселение Итца. Кетцаль придет, зеленая птица придет. Ах Кантеналь придет. Вот слово Бога. Народ Итца придет.' - из книг Чилам Балам
+'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 'Катун установлен в Чичен-Итце. Здесь будет поселение Итца. Кетцаль придёт, зелёная птица придёт. Ах Кантеналь придёт. Вот слово Бога. Народ Итца придёт.' - из книг Чилам Балам
 Golden Age length increases +50% = Длина золотого века +50%
 
 Courthouse = Здание суда
-Remove extra unhappiness from annexed cities = Убрирает дополнительное недовольство из захваченных городов
+Remove extra unhappiness from annexed cities = Убирает дополнительное недовольство из захваченных городов
 Can only be built in annexed cities = Строительство возможно только в захваченных городах
 
 Stable = Конюшня
-+15% Production when building Mounted Units in this city = +15% Производство при постройке конных юнитов в данном городе
++15% Production when building Mounted Units in this city = +15% Производства при постройке конных юнитов в данном городе
 
 Circus Maximus = Цирк Максимус
 
@@ -101,7 +101,7 @@ Terracotta Army = Терракотовая армия
 Market = Рынок
 Bazaar = Восточный базар
 Provides 1 extra copy of each improved luxury resource near this City = Предоставляет копию каждого обрабатываемого редкого ресурса около данного города
-+2 Gold for each source of Oil and oasis = +2 Золото от каждого источника Нефть и оазиса
++2 Gold for each source of Oil and oasis = +2 Золота от каждого источника Нефти и оазиса
 
 Monastery = Монастырь
 
@@ -119,7 +119,7 @@ Machu Picchu = Мачу-Пикчу
 Gold from all trade routes +25% = Золото со всех торговых путей + 25%
 
 Aqueduct = Акведук
-40% of food is carried over after a new citizen is born = 40% продовольствия сохраняется после рождения нового гражданина
+40% of food is carried over after a new citizen is born = 40% продовольства сохраняется после рождения нового гражданина
 
 Great Wall = Великая стена
 'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 'Искуство ведения войны заключается в том, чтобы не полагаться на то, что враг не нападет, а на то, что я сделаю нападение на себя невозможным.' - Сунь Цзы
@@ -127,7 +127,7 @@ Enemy land units must spend 1 extra movement point when inside your territory (o
 
 Workshop = Мастерская
 Longhouse = Длинный дом
-+1 Production from each worked Forest tile = +1 Производство за каждую обрабатываемую лесную клетку
++1 Production from each worked Forest tile = +1 Производства за каждую обрабатываемую лесную клетку
 
 Forge = Кузница
 
@@ -138,7 +138,7 @@ Connects trade routes over water = Создаёт водные торговые 
 University = Университет
 +2 Science from each worked Jungle tile = Джунгли обеспечивают +2 науки
  # Requires translation!
-Wat = 
+Wat = Ват 
 
 Oxford University = Оксфордский университет
 Castle = Замок
