--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -472,7 +472,7 @@ Persia = Персия
 Darius I = Дарий I
 Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = Золотой век длится на 50% дольше. Во время Золотого века юниты получают +1 к движению и +10% к силе.
 
-Polynesia = Полинезия 
+Polynesia = Полинезия
 Kamehameha I = Камеамеа I
 Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = Сразу может погружаться на корабль, а также плавать по побережьям и океанам. +1 к обзору при погружении на корабль. +10% к силе если находится в радиусе 2х клеток от Моаи.
 
@@ -513,7 +513,7 @@ Domination = Завоевание
 Cultural = Культурная
 
 HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = В РАЗРАБОТКЕ - ВЫ ПРЕДУПРЕЖДЕНЫ!
-Online Multiplayer = Онлайн Мультиплеер
+Online Multiplayer = Сетевая игра
 
 World size = Размер мира
 Tiny = Крошечный
