--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1079,7 +1079,7 @@ Autocracy = Автократія
 Populism = Популізм
 Wounded military units deal +25% damage = Поранені військові частини завдають +25% шкоди
 Militarism = Мілітаризм
-Gold cost of purchasing units -33% = Ціна купівлі юніта -33%
+Gold cost of purchasing units -33% = Ціна купівлі підрозділів -33%
 Fascism = Фашизм
 Quantity of strategic resources produced by the empire increased by 100% = Кількість вироблених імперією стратегічних ресурсів зросла на 100%
 Police State = Поліційна держава
