--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -308,10 +308,10 @@ How about something else... = Як щодо іншого…
 A pleasure to meet you. = Приємно зустріти вас.
 Our relationship:  = Наші відносини
 We have encountered the City-State of [name]! = Ми зіткнулися з Містом-державою [name]
-Declare Friendship ([numberOfTurns] turns) = Заявити про дружбу ([numberOfTurns] ходів)
+Declare Friendship ([numberOfTurns] turns) = Заявити про дружбу (Ходів: [numberOfTurns])
 May our nations forever remain united! = Нехай наші народи назавжди залишаються об’єднаними!
 Indeed! = Справді!
-Denounce ([numberOfTurns] turns) = Звинувачення ([numberOfTurns] ходів)
+Denounce ([numberOfTurns] turns) = Звинувачення (Ходів: [numberOfTurns])
 We will remember this. = Ми пам’ятатимемо це.
 
 Unforgivable = непрощальні
