--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -854,6 +854,7 @@ Action =
 Defeated = 
 Tiles = 
 Natural Wonders = 
+Treasury deficit = 
 
 #Victory
 
@@ -937,6 +938,7 @@ Clear terrain features =
 Clear improvements = 
 Clear resource = 
 Requires = 
+Menu = 
 
 # Civilopedia Tutorials names
 
