--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -433,6 +433,15 @@ Denounce ([numberOfTurns] turns) =
 We will remember this. = 
 
  # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
+ # Requires translation!
 Unforgivable = 
  # Requires translation!
 Enemy = 
@@ -1204,6 +1213,8 @@ Hurry Wonder = Grăbește minune
  # Requires translation!
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
 You have entered the [newEra]! = Ai intrat în epoca [newEra]!
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = Ramura [policyBranch] deblocată!
 Overview = Prezentare generală
 Total = Total
