--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -315,6 +315,15 @@ Indeed! = Разумеется!
 Denounce ([numberOfTurns] turns) = Осуждение на [numberOfTurns] ходов
 We will remember this. = Мы это запомним
 
+ # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
 Unforgivable = Непростительно враждебные
 Enemy = Враждебные
 Competitor = Соперничающие
@@ -827,6 +836,8 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Ускорить постройку чуда
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!
 You have entered the [newEra]! = Вы вошли в эпоху [newEra]!
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = Ветвь общественных институтов [policyBranch] разблокирована!
 Overview = Обзор
 Total = Всего
