--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -315,6 +315,15 @@ Indeed! = 这是无比正确的命运抉择！
 Denounce ([numberOfTurns] turns) = 谴责([numberOfTurns]回合)
 We will remember this. = 这种侮辱我们绝不会忘记。请好自为之！
 
+ # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
 Unforgivable = 仇深似海
 Enemy = 宿命之敌
 Competitor = 瑜亮之争
@@ -838,6 +847,8 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = 加速奇观建造
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 人民为您英明领导下取得的丰功伟绩欢欣鼓舞，您的帝国进入了黄金时代！
 You have entered the [newEra]! = 您已进入了[newEra]！
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = [policyBranch]分支解锁！
 Overview = 概览
 Total = 总计
