--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -316,6 +316,15 @@ Indeed! = Vskutku!
 Denounce ([numberOfTurns] turns) = Odsoudit ([numberOfTurns] kol)
 We will remember this. = To vám nikdy nezapomeneme!
 
+ # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
 Unforgivable = Nenávist
 Enemy = Nepřátelství
 Competitor = Negativní
@@ -837,6 +846,8 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Uspíšit stavbu Divu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!
 You have entered the [newEra]! = Vstoupili jsme do éry [newEra]!
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = Zpřístupněna větev sociální politiky: [policyBranch]
 Overview = Přehled
 Total = Celkem
