--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -551,6 +551,15 @@ Denounce ([numberOfTurns] turns) =
 We will remember this. = 
 
  # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
+ # Requires translation!
 Unforgivable = 
  # Requires translation!
 Enemy = 
@@ -1507,6 +1516,8 @@ Hurry Wonder =
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = 
  # Requires translation!
 You have entered the [newEra]! = 
+ # Requires translation!
+[civName] has entered the [eraName]! = 
  # Requires translation!
 [policyBranch] policy branch unlocked! = 
  # Requires translation!
