--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -314,6 +314,15 @@ Indeed! = ¡Por supuesto!
 Denounce ([numberOfTurns] turns) = Denunciar ([numberOfTurns] turnos)]
 We will remember this. = Recordaremos esto.
 
+ # Requires translation!
+[civName] has declared war on [targetCivName]! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Peace Treaty! = 
+ # Requires translation!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+ # Requires translation!
+[civName] has denounced [targetCivName]! = 
+
 Unforgivable = Imperdonable
 Enemy = Enemigo
 Competitor = Competidor
@@ -826,6 +835,8 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Acelerar Maravilla
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = ¡Tus ciudadanos han estado contentos con tu gobierno durante tanto tiempo que el imperio ha entrado en una Edad de Oro!
 You have entered the [newEra]! = ¡Has entrado en la [newEra]!
+ # Requires translation!
+[civName] has entered the [eraName]! = 
 [policyBranch] policy branch unlocked! = ¡Rama política [policyBranch] desbloqueada!
 Overview = Visión general
 Total = Total
