new french translation (#1574)

--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -692,7 +692,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Nous avons 
 Your relationship with [cityStateName] is about to degrade = Notre relation avec [cityStateName] va se dégrader
 Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
  # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = Un nouveau campement barbare est apparu !
 
 # World Screen UI
 
@@ -924,7 +924,7 @@ Upgrades to [upgradedUnit] = Améliorer en [upgradedUnit]
 Obsolete with [obsoleteTech] = Obsolète avec [obsoleteTech]
 Occurs on [listOfTerrains] = Doit possèder [listOfTerrains]
  # Requires translation!
-Placed on [terrainType] = 
+Placed on [terrainType] = Placé en [terrainType]
 Can be found on  = Peut être trouver sur 
 Improved by [improvement] = Amélioré par [improvement]
 Bonus stats for improvement:  = Bonus de case améliorée: 
@@ -1311,9 +1311,9 @@ Fountain of Youth = Fontaine de Jouvence
 # Natural Wonders Uniques
 
  # Requires translation!
-Grants 500 Gold to the first civilization to discover it = 
+Grants 500 Gold to the first civilization to discover it = Donne 500 Or a la première civilisation qui le découvre
  # Requires translation!
-Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Occtroie le Rajeunissement (tous les effets de soins sont doublés) a toutes les unités militaires adjacentes pour le reste de la partie
 
 # Resources
 
@@ -1449,9 +1449,9 @@ Landsknecht = Lansquenet
 Knight = Chevalier
 Camel Archer = Archer méhariste
  # Requires translation!
-Conquistador = 
+Conquistador = Conquistador
  # Requires translation!
-Defense bonus when embarked = 
+Defense bonus when embarked = Bonus de défense quand embarqué
 Naresuan's Elephant = Elephant de Naresuan
 Samurai = Samuraï
 Combat very likely to create Great Generals = A de grande chance de faire apparaitre un général illustre suite à un combat
@@ -1459,13 +1459,13 @@ Caravel = Caravelle
 Turtle Ship = Bateau Tortue
 +1 Visibility Range = +1 à la Portée de Vision
  # Requires translation!
-+2 Visibility Range = 
++2 Visibility Range = +2 à la Portée de Vision
 Cannon = Canon
 Musketman = Arquebusier
 Musketeer = Mousquetaire
 Janissary = Janissaire
  # Requires translation!
-Tercio = 
+Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Soigne [amountHealed] dégâts si il tue une unité
 Minuteman = Minuteman
 Frigate = Frégate
