--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -860,6 +860,7 @@ Action =
 Defeated = 
 Tiles = 
 Natural Wonders = 
+Treasury deficit = 
 
 #Victory
 
@@ -943,6 +944,7 @@ Clear terrain features =
 Clear improvements = 
 Clear resource = 
 Requires = 
+Menu = 
 
 # Civilopedia Tutorials names
 
